# c-iterplus

./: .clang-format  ARCHITECTURE.md  CMakeLists.txt  Doxyfile  README.md  itplus.h
docs/: annotated.html  annotated_dup.js  classes.html  common_8h.html  common_8h__dep__incl.map  common_8h__dep__incl.md5  common_8h_source.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.html  dir_59425e443f801f1f2fd8bbe4959a3ccf.js  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23.js  files.html  files_dup.js  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  graph_legend.html  impls_8c.html  impls_8h.html  impls_8h.js  impls_8h__dep__incl.map  impls_8h__dep__incl.md5  impls_8h_source.html  index.html  itplus_8h.html  itplus_8h.js  itplus_8h_source.html  itplus__chain_8h.html  itplus__chain_8h.js  itplus__chain_8h__dep__incl.map  itplus__chain_8h__dep__incl.md5  itplus__chain_8h_source.html  itplus__collect_8h.html  itplus__collect_8h.js  itplus__collect_8h__dep__incl.map  itplus__collect_8h__dep__incl.md5  itplus__collect_8h_source.html  itplus__defn_8h.html  itplus__defn_8h.js  (+103 more)
docs/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  defines_8.js  defines_9.js  defines_a.js  defines_b.js  defines_c.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  searchdata.js
include/: foreach.h  iterator.h  itplus.h  itplus_chain.h  itplus_collect.h  itplus_defn.h  itplus_drop.h  itplus_dropwhile.h  itplus_elemindices.h  itplus_enumerate.h  itplus_filter.h  itplus_filtermap.h  itplus_fold.h  itplus_foreach.h  itplus_iterator.h  itplus_macro_utils.h  itplus_map.h  itplus_maybe.h  itplus_pair.h  itplus_reduce.h  itplus_take.h  itplus_takewhile.h  itplus_zip.h  macro_utils.h  map.h  take.h  typeclass.h
samples/: CMakeLists.txt  impls.c  impls.h  main.c  sugar.c  sugar.h
tests/: CMakeLists.txt  common.h  impls.c  impls.h  main.c  preproc_map.h  stdnames.h  sugar.c  sugar.h
